Fixed font overflow on 'Haze' skin inside of texboxes (by adding explicit line-height).

--- a/media/skins/haze.css
+++ b/media/skins/haze.css
@@ -220,6 +220,11 @@ select, textarea, button, .button {
     padding-left: 20px;
     padding-right: 20px;
 }
+
+input:not([type=radio]):not([type=checkbox]):not([type=button]):not([type=submit]),
+select, textarea {
+    line-height: 1.2rem;
+}
 .strip, textarea {
 }
 
